--- a/src/scss/empire/_settings.scss
+++ b/src/scss/empire/_settings.scss
@@ -61,7 +61,8 @@ $emp-label-width: 200px;
 
 // * @section    Headers
 // * --------------------------------------------------------
-$section-header-font-size: 20px;
+$section-header-font-size:  20px;
+$section-header-min-height: 36px;
 
 // * @section    Sections
 // * --------------------------------------------------------
